--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   margin: 0;
-  padding: 2rem;
+  padding: 1rem;
   background: #fff;
   color: #111;
   box-sizing: border-box;
@@ -36,7 +36,7 @@ nav a {
 .grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 2rem;
+  gap: 3rem;
   width: 100%;
   box-sizing: border-box;
 }
@@ -45,6 +45,12 @@ nav a {
   .grid {
     grid-template-columns: repeat(3, 1fr);
   }
+}
+
+.thumb {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .thumb img {
@@ -65,5 +71,5 @@ nav a {
 
 .project img {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
