--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -3,13 +3,17 @@
 {% block content %}
   <main class="grid">
     {% for project in collections.project %}
-      <a class="thumb" href="{{ project.url }}" data-type="{{ project.data.type }}" data-year="{{ project.data.year }}">
+      <a class="thumb" href="{{ project.url }}"
+         data-what="{{ project.data.what | slug }}"
+         data-who="{{ project.data.who | slug }}"
+         data-where="{{ project.data.where | slug }}"
+         data-when="{{ project.data.when | slug }}">
         <div class="thumb-img-wrapper">
           <img src="{{ project.data.images[0] }}" alt="{{ project.data.title }}">
         </div>
         <div class="thumb-text">
           <h2>{{ project.data.title }}</h2>
-          <p>{{ project.data.location }} – {{ project.data.year }}</p>
+          <p>{{ project.data.where }} – {{ project.data.when }}</p>
         </div>
       </a>
     {% endfor %}
