--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -19,7 +19,7 @@
   </script>
 
   <!-- Favicon -->
-  <!--  <link rel="icon" type="image/png" href="/img/favicon.png"> -->
+  <link rel="icon" type="image/png" href="/img/favicon.png">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
