--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,9 @@ a:active {
   color: var(--color-text-secondary);
   margin-top: 2em;
   text-align: left;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .meta-label {
