--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -50,7 +50,7 @@
       <input type="text" id="search" placeholder="Search projects..." autocomplete="off" style="display:none;">
       <button id="filter-toggle" class="filter-toggle nav-btn" aria-haspopup="true" aria-expanded="false">Filter</button>
       <div id="filter-w-row" class="filter-w-row" style="display:none;">
-        {% set allProjects = collections.projects %}
+        {% set allProjects = collections.project %}
         {% set whatList = allProjects | map(attribute='data.what') | unique | sort %}
         {% set whoList = allProjects | map(attribute='data.who') | unique | sort %}
         {% set whereList = allProjects | map(attribute='data.where') | unique | sort %}
