--- a/_includes/about.njk
+++ b/_includes/about.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-  <article class="page">
+  <article class="page about-center">
     <h1>{{ title }}</h1>
     <div class="body">
       {{ content | safe }}
