--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -102,7 +102,8 @@
           </div>
         </div>
       </div>
-      <a href="/about" class="nav-btn">Hakkında</a>
+      <a href="/list" class="nav-btn">Bul</a>
+      <a href="/about" class="nav-btn">Bil</a>
       <button id="theme-switch" aria-label="Toggle dark mode" class="theme-switch nav-btn"></button>
     </nav>
   </header>
