--- a/css/styles.css
+++ b/css/styles.css
@@ -632,24 +632,47 @@ a:active {
 @media (max-width: 600px) {
   header {
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     padding: var(--spacing-sm) 0;
+  }
+
+  .logo-area {
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
   }
 
   .main-nav {
     flex-wrap: wrap;
     gap: 1em;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100vw;
     box-sizing: border-box;
     overflow-x: auto;
     padding-left: 0.5em;
+    margin-top: 1.2em;
   }
 
   .nav-btn,
   .main-nav a {
     font-size: 1.1em;
     padding: 0.3em 0.7em;
+  }
+
+  .theme-switch {
+    min-width: 1em;
+    min-height: 1em;
+    width: 1.5em;
+    height: 1.5em;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    margin-left: 1.5rem;
+    margin-right: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: middle;
   }
 
   #filter-w-row {
@@ -690,8 +713,10 @@ a:active {
 
   .project {
     max-width: 100vw;
-    padding: 1.2rem 0.2rem;
+    padding: 1.2rem 0.5rem;
     border-radius: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .project-main,
@@ -707,9 +732,10 @@ a:active {
     width: 100vw;
     max-width: 100vw;
     height: auto;
-    margin-left: -2vw;
-    margin-right: -2vw;
+    margin-left: 0;
+    margin-right: 0;
     border-radius: 0;
+    display: block;
   }
 
   .project h1 {
