--- a/css/styles.css
+++ b/css/styles.css
@@ -632,22 +632,23 @@ a:active {
 @media (max-width: 600px) {
   header {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding: var(--spacing-sm) 0;
   }
 
   .logo-area {
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 100vw;
     display: flex;
     flex-direction: column;
+    margin-left: 0.5em;
   }
 
   .main-nav {
     flex-wrap: wrap;
     gap: 1em;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100vw;
     box-sizing: border-box;
     overflow-x: auto;
@@ -662,10 +663,10 @@ a:active {
   }
 
   .theme-switch {
-    min-width: 1em;
-    min-height: 1em;
-    width: 1.5em;
-    height: 1.5em;
+    min-width: 0.9em;
+    min-height: 0.9em;
+    width: 1.1em;
+    height: 1.1em;
     aspect-ratio: 1/1;
     border-radius: 50%;
     margin-left: 1.5rem;
