--- a/css/styles.css
+++ b/css/styles.css
@@ -722,21 +722,28 @@ a:active {
 
   .project-main,
   .project-main-centered {
-    max-width: 98vw;
+    max-width: 90vw;
     padding: 0;
     margin: 0 auto;
     text-align: left;
-    align-items: stretch;
+    align-items: center;
   }
 
   .project img {
-    width: 100vw;
-    max-width: 100vw;
+    width: 80vw;
+    max-width: 350px;
     height: auto;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 0;
     display: block;
+  }
+
+  .project .body {
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
   }
 
   .project h1 {
