--- a/_includes/project.njk
+++ b/_includes/project.njk
@@ -6,10 +6,10 @@
       <div class="project-meta">
         <h1>{{ title }}</h1>
         <div class="project-meta-info">
-          {% if who %}<div class="project-meta-row"><span class="meta-label">Who:</span> {{ who }}</div>{% endif %}
-          {% if what %}<div class="project-meta-row"><span class="meta-label">What:</span> {{ what }}</div>{% endif %}
-          {% if where %}<div class="project-meta-row"><span class="meta-label">Where:</span> {{ where }}</div>{% endif %}
-          {% if when %}<div class="project-meta-row"><span class="meta-label">When:</span> {{ when }}</div>{% endif %}
+          {% if Ne %}<div class="project-meta-row"><span class="meta-label">Ne:</span> {{ Ne }}</div>{% endif %}
+          {% if Kim %}<div class="project-meta-row"><span class="meta-label">Kim:</span> {{ Kim }}</div>{% endif %}
+          {% if Nerede %}<div class="project-meta-row"><span class="meta-label">Nerede:</span> {{ Nerede }}</div>{% endif %}
+          {% if Ne Zaman %}<div class="project-meta-row"><span class="meta-label">Ne Zaman:</span> {{ Ne Zaman }}</div>{% endif %}
         </div>
       </div>
     {% endblock %}
