--- a/_includes/list.njk
+++ b/_includes/list.njk
@@ -5,19 +5,19 @@
   <table class="project-list-table">
     <thead>
       <tr>
-        <th data-sort="title">Proje</th>
-        <th data-sort="who">Mimar</th>
-        <th data-sort="when">Yıl</th>
-        <th data-sort="where">Yer</th>
+        <th data-sort="mimar">Mimar</th>
+        <th data-sort="yer">Yer</th>
+        <th data-sort="tur">Tür</th>
+        <th data-sort="tarih">Tarih</th>
       </tr>
     </thead>
     <tbody id="project-list-body">
       {% for project in collections.project | reverse %}
       <tr class="project-row" data-href="{{ project.url }}">
-        <td>{{ project.data.title }}</td>
-        <td>{{ project.data.who }}</td>
-        <td>{{ project.data.when }}</td>
-        <td>{{ project.data.where }}</td>
+        <td>{{ project.data.mimar }}</td>
+        <td>{{ project.data.yer.split(',')[0] }}</td>
+        <td>{{ project.data.tur }}</td>
+        <td>{{ project.data.tarih }}</td>
       </tr>
       {% endfor %}
     </tbody>
