--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -15,7 +15,7 @@
           <h2>{{ project.data.title }}</h2>
           {% if project.data.mimar %}<div class="thumb-who">{{ project.data.mimar }}</div>{% endif %}
           <p>
-            {{ project.data.yer.split(',')[0] }}<br>
+            {{ project.data.yer }}<br>
             <span class="thumb-year">{{ project.data.tarih }}</span>
           </p>
         </div>
