--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -58,17 +58,26 @@
       <div id="filter-w-row" class="filter-w-row" style="display:none;">
         {% set allProjects = collections.project %}
         {% set turList = allProjects | map('data.tur') | sort | unique %}
-        {% set mimarList = allProjects | map('data.mimar') | sort | unique %}
+        {# Build a unique list of architect names for the dropdown #}
+        {% set mimarNames = [] %}
+        {% for project in allProjects %}
+          {% if project.data.mimar is string %}
+            {% for name in project.data.mimar.split(',') %}
+              {% set trimmed = name | trim %}
+              {% if trimmed and (mimarNames.indexOf(trimmed) == -1) %}
+                {% set _ = mimarNames.push(trimmed) %}
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        {% endfor %}
         {% set yerList = allProjects | map('data.yer') | sort | unique %}
         {% set tarihList = allProjects | map('data.tarih') | sort | unique %}
         {% set decadeGroups = tarihList | groupByDecade %}
         <div class="filter-w-item" tabindex="0">
           <span>Mimar</span>
           <div class="filter-w-submenu">
-            {% for mimar in mimarList %}
-              {% if mimar is string %}
-                <button class="filter-submenu" data-filter-group="mimar" data-filter-value="{{ mimar | slug }}">{{ mimar }}</button>
-              {% endif %}
+            {% for mimar in mimarNames | sort %}
+              <button class="filter-submenu" data-filter-group="mimar" data-filter-value="{{ mimar | slug }}">{{ mimar }}</button>
             {% endfor %}
           </div>
         </div>
